
2007-01-30  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixing oddities in recursive stdWraps (bugs #4312 and #4871)
	* Fix bug #4678: t3lib_div::array2xml() may crash with PHP 5.2.0
	* Fix bug #3648: ease use of tslib_cObj::getTreeList()
	* Added SYS[requestURIvar] to get original value of REQUEST_URI (needed by some URL writers for IIS)

2007-01-30  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed never disappearing proposal to update database structure in Install>Database>COMPARE

2007-01-29  Dmitry Dulepov  <dmitry@typo3.org>

	* !!! Changed MySQL engine type for several database tables to InnoDB
	* Added several new indexes

2007-01-28  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Added "html { height: 100% }" to stylesheet to make RTE wizard (rteHTMLarea) work in IE7
	* Remove checks for PHP version earlier than 4.3

2007-01-24  Dmitry Dulepov  <dmitry@typo3.org>

	* Added `useCDATA` to a list of t3lib_div::array2xml() options to produce CDATA instead of entities

2007-01-26  Oliver Hader  <oh@inpublica.de>

	* Fixed bug 4814: Umlauts error in AJAX Pagetree
	* Updated prototype.js to version 1.5.0
	* Updated script.aculo.us to version 1.7.0
	* Created new directory for external contributions typo3/contrib/ and moved files:
		- typo3/prototype.js	-> typo3/contrib/prototype/prototype.js
		- typo3/scriptaculous/*	-> typo3/contrib/scriptaculous/*
		- typo3/json.php		-> typo3/contrib/json.php
	* Changed paths to typo3/contrib in affected core files

2007-01-25  Ingmar Schlecht  <ingmar@typo3.org>

	* Added backwards compatibility to pagetree for non AJAX-capable browsers (by Benjamin Mack)

2007-01-24  Michael Stucki  <michael@typo3.org>

	* Install Tool: Network 192.168.0.0/255.255.0.0 was allowed to enter the Install Tool regardless of the die() presence in typo3/install/index.php. This exception has been removed, only 127.0.0.1 may now enter the Install Tool regardless of any other conditions.