@@ -1,4 +1,8 @@
 
+2007-02-30  Martin Kutschker  <martin.t.kutschker@blackbox.net>
+
+	* Changed t3lib_cipboard to use new mod.php?M=xMOD_tximpexp (instead old impexp/app/index.php)
+
 2007-01-30  Martin Kutschker  <martin.t.kutschker@blackbox.net>
 
 	* Fixing oddities in recursive stdWraps (bugs #4312 and #4871)
